fixed set word logic to account for extra whitespaces HM

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -229,6 +229,15 @@ p {
 
 /* Hangman style */
 
+#wordBlanks {
+  white-space: nowrap;
+  margin: 15px;
+}
+
+#whiteSpace {
+  white-space: pre-wrap;
+}
+
 #hangmanImg {
   min-width: 300px;
   border-radius: 30px;
